# agoraAI

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.en.md  README.ja.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyrightconfig.json  spec.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/evaluation_results/: baseline_v0.json  wondrous_v1.json  wondrous_v2.json
backend/scripts/: benchmark_liquid_activation.py  smoke_hybrid_provider.py
backend/src/app/: accuracy_config.py  config.py  database.py  main.py
backend/src/app/api/: deps.py
backend/src/app/evaluation/: accuracy_spec.py  base.py  diagnostic.py  gate_runner.py  metrics.py  retrodiction_runner.py  runner.py  snapshot.py
backend/src/app/llm/: client.py  json_extraction.py  multi_client.py  prompts.py  rate_limiter.py  validator.py
backend/src/app/models/: __init__.py  agent_activation_result.py  agent_profile.py  agent_state.py  aggregation_result.py  audit_event.py  calibration_data.py  calibration_profile.py  claim_cluster.py  codex_review.py  colony.py  community.py  conversation_log.py  document.py  entity.py  environment_rule.py  evaluation_result.py  evaluation_score.py  experiment_config.py  followup.py  graph_activity_event.py  graph_diff.py  graph_state.py  kg_edge.py  kg_node.py  llm_call_log.py  log.py  memory_entry.py  message.py  outcome_claim.py  population.py  population_snapshot.py  prediction_evaluation.py  project.py  relation.py  report.py  run.py  scenario_pair.py  simulation.py  social_edge.py  (+8 more)
backend/src/app/repositories/: evaluation_repo.py  llm_log_repo.py  simulation_repo.py  validation_repo.py
backend/src/app/schemas/: graph_activity.py
backend/src/app/services/: agent_generator.py  aggregator.py  audit_trail_service.py  baseline_orchestrator.py  calibrator.py  claim_clusterer.py  claim_extractor.py  codex_review_service.py  colony_factory.py  conversation_log_store.py  cost_tracker.py  decision_brief_schema.py  decision_briefing.py  document_parser.py  final_report_generator.py  followup_handler.py  graph_activity.py  graph_projection.py  meta_intervention_planner.py  meta_orchestrator.py  meta_score.py  pipeline_fallbacks.py  pipeline_orchestrator.py  pm_board_orchestrator.py  population_snapshot_service.py  quality.py  react_reporter.py  report_generator.py  round_processor.py  scenario_comparison.py  scenario_pair_factory.py  scenario_pair_status.py  simulation_dispatcher.py  simulation_live_state.py  simulator.py  society_first_orchestrator.py  swarm_orchestrator.py  swarm_report_generator.py  theater_events.py  unified_orchestrator.py  (+3 more)
backend/src/app/sse/: manager.py
backend/src/app/utils/: distribution_metrics.py
backend/tests/: conftest.py  e2e_verify_academic_features.py  factories.py  test_accuracy_config.py  test_activation_compact.py  test_activation_layer.py  test_activation_store.py  test_agent_generator_seeds.py  test_agent_selector.py  test_api_scenario_pairs.py  test_async_failure_handlers.py  test_audit_trail_service.py  test_benchmark_fixes.py  test_bug_fixes.py  test_calibration.py  test_codex_bridge.py  test_codex_review_service.py  test_cognitive_agent_sse.py  test_config.py  test_confirmation_bias.py  test_conformal_prediction.py  test_conversation_log_store.py  test_conversation_sse.py  test_cost_monitor.py  test_cost_tracker.py  test_data_grounding.py  test_database.py  test_debate_sse.py  test_decision_brief_schema.py  test_decision_briefing.py  test_default_population_reuse.py  test_deliberation_quality.py  test_deliberation_sse.py  test_diagnostic.py  test_dispatcher_v2.py  test_distribution_metrics.py  test_document_parser.py  test_emergence_tracker.py  test_ensemble.py  test_ensemble_aggregator.py  (+107 more)
backend/tests/fixtures/: golden_cases.json  survey_data_combined.yaml  survey_data_extended.yaml  survey_data_sample.yaml
backend/tests/fixtures/gate/: economy_gate.yaml  security_gate.yaml
backend/tests/integration/: test_stakeholder_grounding.py
backend/tests/services/communication/: test_cascade_propagator.py
backend/tests/services/society/: test_bayesian_belief.py  test_calibration_learning_loop.py  test_diversity_enforcer.py  test_echo_chamber_detector.py  test_ensemble_runner.py  test_horizonal_calibrator.py  test_internal_observation_loop.py  test_market_strategies.py  test_multi_outcome_market.py  test_particle_filter.py  test_population_drift.py  test_state_carryover.py  test_temporal_report_generator.py  test_time_axis_runner.py  (+1 more)
(+477 files in other folders)
