[project]
name = "agent-ai-backend"
version = "1.0.0"
description = "Realtime Graph Multi-Agent Simulation Report System - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "pymupdf>=1.24.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "networkx>=3.2.0",
    "httpx>=0.27.0",
    "scipy>=1.17.1",
    "optuna>=4.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.12",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
# 安全網の再現性を固定する。asyncio_mode=strict は明示マーカー(@pytest.mark.asyncio)を必須にし、
# マーカー付け忘れで非同期テストが黙ってスキップ/エラー化するのを防ぐ。
asyncio_mode = "strict"
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests"]

[tool.ruff.lint]
# 段階導入(現): F401(未使用import), I(import整列), UP(構文近代化)。
# F 全体(F841 未使用変数12件=潜在バグ含む要レビュー), E501(行長379), B(B008=FastAPI Depends 誤検知含む),
# C4, SIM は手動修正/要判断が多いため次段階で導入する(plans/refactor/task.md の P3 メモ参照)。
select = ["F401", "I", "UP"]

[tool.deptry]
extend_exclude = ["tests"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "uvicorn", # Docker/runtime command
    "aiosqlite", # SQLAlchemy SQLite driver
    "asyncpg", # SQLAlchemy PostgreSQL driver
    "redis", # optional deployment service
    "python-multipart", # FastAPI UploadFile/form parser
]

[tool.vulture]
# デコレータ経由で使われるルートハンドラ/バリデータを誤検知しないよう除外。
# 実行例: uv run vulture src --min-confidence 80
min_confidence = 80
ignore_decorators = ["@router.*", "@app.*", "@field_validator", "@model_validator"]
ignore_names = ["model_config"]
